--- a/h6.basis-structuur-en-positionering/oefening1.css
+++ b/h6.basis-structuur-en-positionering/oefening1.css
@@ -1,51 +1,48 @@
-* {
-    font-family: Calibri, sans serif;
+*{
+    font-family: Verdana sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-#box1{
-    background-color: #00ffff;
-    border: 3px solid black;
-    top: 0;
-    left: 0;
-    width: 70px;
-    height: 70px;
+header h1{
+    color: #ff7300;
+}
+main div{
+    background-color: #ff7300;
+    width: 200px;
+    height: 200px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    box-shadow: black 5px 5px 5px;
     position: absolute;
+}
+#box1{
+    top: 50px;
+    left: 0px;
+    z-index: 5;
 }
 #box2{
-    background-color: #00b2ff;
-    border: 3px solid black;
     top: 70px;
-    left: 70px;
-    width: 70px;
-    height: 70px;
-    position: absolute;
+    left: 20px;
+    opacity: 0.8;
+    z-index: 4;
 }
 #box3{
-    background-color: #00c2ff;
-    border: 3px solid black;
-    top: 140px;
-    left: 140px;
-    width: 70px;
-    height: 70px;
-    position: absolute;
+    top: 90px;
+    left: 40px;
+    opacity: 0.6;
+    z-index: 3;
 }
 #box4{
-    background-color: #0052ff;
-    border: 3px solid black;
-    top: 210px;
-    left: 210px;
-    width: 70px;
-    height: 70px;
-    position: absolute;
+
+    top: 110px;
+    left: 60px;
+    opacity: 0.4;
+    z-index: 2;
 }
-#box5{
-    background-color: #00ccff;
-    border: 3px solid black;
-    top: 280px;
-    left: 280px;
-    width: 70px;
-    height: 70px;
-    position: absolute;
+#box5 {
+    top: 130px;
+    left: 80px;
+    opacity: 0.2;
+    z-index: 1;
 }
