--- a/oefeningen/h8.flexbox-oef/oefening2.css
+++ b/oefeningen/h8.flexbox-oef/oefening2.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Open_Sans sans-serif;
+    font-family: Verdana, sans-serif;
 }
 header{
-    max-width: 1200px;
+    width: 1200px;
     margin: auto;
 }
 header h1{
@@ -14,44 +14,109 @@ header h1{
     background-color: #1E90FF;
     padding: 20px;
     text-align: center;
+    margin: auto;
 }
 main{
     display: flex;
     flex-flow: row;
-    max-width: 1200px;
+    width: 1200px;
+    margin: auto;
 }
 #playstation{
-    max-width: 380px;
+    max-width: 450px;
+    max-height: 900px;
     text-align: center;
-    margin-left: 20px ;
+    margin-left: 30px;
+    margin-right: 20px;
+    border: 1px  solid #303030;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+#playstation h3{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.4rem;
 }
 #playstation img{
     max-width: 300px;
-    margin-right: 20px ;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 #playstation p{
     max-width: 300px;
+    margin: auto;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    text-align: left;
 }
 #xbox{
-    border: 380px;
-    margin-right: 30px;
+    max-width: 450px;
+    max-height: 900px;
     text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 1px  solid #303030;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+#xbox h3{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.4rem;
 }
 #xbox img{
     max-width: 300px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 #xbox p{
     max-width: 300px;
+    margin: auto;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    text-align: left;
+
+}
+.prijs{
+    border-radius: 5px;
+    max-height: 2rem;
+    max-width: 18rem;
+    color: #ffffff;
+    font-size: 12pt;
+    text-align: center;
+    background-color: #1E90FF;
+    padding-top: 7px;
+    padding-bottom: 15px;
+    margin-left: 25px;
+    margin-bottom: 25px;
 }
 #nintendo{
-    max-width: 380px;
-    margin-left: 30px;
-    margin-right: 10px;
+    max-width: 450px;
+    max-height: 900px;
     text-align: center;
+    margin-left: 20px;
+    margin-right: 30px;
+    border: 1px  solid #303030;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+#nintendo h3{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.4rem;
 }
 #nintendo img{
     max-width: 300px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 #nintendo p{
     max-width: 300px;
+    margin: auto;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    text-align: left;
 }
